feat: users analytics
